--- a/system2/src/Lecturdashbord.form
+++ b/system2/src/Lecturdashbord.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="822" height="400"/>
+      <xy x="20" y="20" width="1006" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -16,69 +16,20 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="d8f43" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="d8f43" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="10" left="10" bottom="10" right="10"/>
             <constraints>
               <grid row="0" column="0" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-13922170"/>
+              <foreground color="-13922170"/>
             </properties>
             <border type="none"/>
             <children>
-              <component id="ab42f" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <font name="Arial Black" size="20" style="1"/>
-                  <foreground color="-131073"/>
-                  <text value="Dashboard"/>
-                </properties>
-              </component>
-              <component id="bdaf8" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <foreground color="-131073"/>
-                  <icon value="image/4.png"/>
-                  <text value=""/>
-                </properties>
-              </component>
-              <component id="4c22c" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <foreground color="-131073"/>
-                  <icon value="image/mark small.png"/>
-                  <text value=""/>
-                </properties>
-              </component>
-              <component id="3f848" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <foreground color="-131073"/>
-                  <icon value="image/student small.png"/>
-                  <text value=""/>
-                </properties>
-              </component>
-              <component id="d318b" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <foreground color="-131073"/>
-                  <icon value="image/3.png"/>
-                  <text value=""/>
-                </properties>
-              </component>
               <component id="8bbaa" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <foreground color="-131073"/>
@@ -86,18 +37,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="31e66" class="javax.swing.JButton" binding="coursesButton" default-binding="true">
-                <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <text value="Courses"/>
-                </properties>
-              </component>
-              <component id="7c75c" class="javax.swing.JButton" binding="marksButton" default-binding="true">
+              <component id="31e66" class="javax.swing.JButton" binding="editProfileButton" default-binding="true">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -105,10 +45,10 @@
                   <background color="-13922170"/>
                   <font name="Arial Black" size="14" style="1"/>
                   <foreground color="-131073"/>
-                  <text value="Marks"/>
+                  <text value="Edit Profile"/>
                 </properties>
               </component>
-              <component id="b3330" class="javax.swing.JButton" binding="studentsButton" default-binding="true">
+              <component id="f87a1" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
                 <constraints>
                   <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -116,29 +56,36 @@
                   <background color="-13922170"/>
                   <font name="Arial Black" size="14" style="1"/>
                   <foreground color="-131073"/>
-                  <text value="Students"/>
-                </properties>
-              </component>
-              <component id="efff1" class="javax.swing.JButton" binding="noticeButton" default-binding="true">
-                <constraints>
-                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <text value="Notice"/>
-                </properties>
-              </component>
-              <component id="f87a1" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
-                <constraints>
-                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
                   <text value="Logout"/>
+                </properties>
+              </component>
+              <component id="e3bf0" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <icon value="image/user large.png"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="2fd01" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <icon value="image/edit icon.png"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="3d2fc" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <background color="-13922170"/>
+                  <foreground color="-13922170"/>
                 </properties>
               </component>
             </children>
