--- a/system2/src/LecStudentdashbord.form
+++ b/system2/src/LecStudentdashbord.form
@@ -3,12 +3,12 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="835" height="400"/>
+      <xy x="20" y="20" width="1275" height="488"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="f11cc" layout-manager="GridLayoutManager" row-count="3" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="f11cc" layout-manager="GridLayoutManager" row-count="4" column-count="13" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -27,15 +27,6 @@
               <text value="Details"/>
             </properties>
           </component>
-          <component id="fa9ff" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <icon value="image/mark large.png"/>
-              <text value=""/>
-            </properties>
-          </component>
           <component id="f9b14" class="javax.swing.JButton" binding="eligibilityButton" default-binding="true">
             <constraints>
               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -45,18 +36,18 @@
               <text value="Eligibility"/>
             </properties>
           </component>
-          <component id="f1b6" class="javax.swing.JButton" binding="marksGradeGPAButton" default-binding="true">
+          <component id="f1b6" class="javax.swing.JButton" binding="gradeButton" default-binding="true">
             <constraints>
-              <grid row="2" column="3" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="4" row-span="1" col-span="9" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-13922170"/>
-              <text value="Marks/Grade/GPA"/>
+              <text value="Grade"/>
             </properties>
           </component>
           <component id="f05c5" class="javax.swing.JLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="9" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="13" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-66049"/>
@@ -64,52 +55,43 @@
               <text value="DASHBORD"/>
             </properties>
           </component>
-          <component id="4cf9b" class="javax.swing.JButton" binding="attendanceButton" default-binding="true">
+          <component id="c5f49" class="javax.swing.JLabel">
             <constraints>
-              <grid row="2" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <icon value="image/mark large.png"/>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="81442" class="javax.swing.JButton" binding="markButton" default-binding="true">
+            <constraints>
+              <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-13922170"/>
-              <text value="Attendance"/>
+              <text value="Mark"/>
             </properties>
           </component>
-          <component id="7d7c3" class="javax.swing.JButton" binding="medicalButton" default-binding="true">
+          <component id="c7b09" class="javax.swing.JLabel">
             <constraints>
-              <grid row="2" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-13922170"/>
-              <text value="Medical "/>
-            </properties>
-          </component>
-          <component id="1f50d" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="1" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <icon value="image/medical large.png"/>
+              <icon value="image/Eligibility large.png"/>
               <text value=""/>
             </properties>
           </component>
-          <component id="6bdd9" class="javax.swing.JLabel">
+          <component id="f19cd" class="javax.swing.JLabel">
             <constraints>
-              <grid row="1" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="4" row-span="1" col-span="9" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <icon value="image/attendence large.png"/>
+              <icon value="image/grade large.png"/>
               <text value=""/>
             </properties>
           </component>
-          <component id="7aeee" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="1" column="3" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <icon value="image/gpa large.png"/>
-              <text value=""/>
-            </properties>
-          </component>
-          <component id="f8b9e" class="javax.swing.JLabel">
+          <component id="cf952" class="javax.swing.JLabel">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -118,6 +100,70 @@
               <text value=""/>
             </properties>
           </component>
+          <grid id="6a217" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="13" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="bf648" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <icon value="image/gpa large.png"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="9ee37" class="javax.swing.JButton" binding="GPAButton" default-binding="true">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13922170"/>
+                  <text value="GPA"/>
+                </properties>
+              </component>
+              <component id="38b67" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <icon value="image/attendence large.png"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="77870" class="javax.swing.JButton" binding="attendanceButton1" default-binding="true">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13922170"/>
+                  <text value="Attendance"/>
+                </properties>
+              </component>
+              <component id="385d4" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <icon value="image/medical large.png"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="a12c9" class="javax.swing.JButton" binding="medicalButton1" default-binding="true">
+                <constraints>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13922170"/>
+                  <text value="Medical"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
         </children>
       </grid>
     </children>
