--- a/system2/src/LecStudentdashbord.form
+++ b/system2/src/LecStudentdashbord.form
@@ -105,7 +105,9 @@
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="13" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <font size="72" style="3"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="bf648" class="javax.swing.JLabel">
