--- a/system2/src/TO_Medical.form
+++ b/system2/src/TO_Medical.form
@@ -45,6 +45,7 @@
                   <background color="-13922170"/>
                   <font name="Arial Black" size="14" style="1"/>
                   <foreground color="-131073"/>
+                  <hideActionText value="false"/>
                   <text value="Attendence"/>
                 </properties>
               </component>
@@ -138,7 +139,7 @@
               </component>
             </children>
           </grid>
-          <grid id="e4e43" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="e4e43" binding="panal2" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -146,27 +147,39 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="26934" class="javax.swing.JButton" binding="addButton" default-binding="true">
+              <component id="96f90" class="javax.swing.JButton" binding="addButton">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-13922170"/>
+                  <font name="Arial Black" size="14" style="1"/>
+                  <foreground color="-131073"/>
+                  <hideActionText value="false"/>
                   <text value="Add"/>
                 </properties>
               </component>
-              <component id="1294" class="javax.swing.JButton" binding="updateButton" default-binding="true">
+              <component id="7d20c" class="javax.swing.JButton" binding="updateButton">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-13922170"/>
+                  <font name="Arial Black" size="14" style="1"/>
+                  <foreground color="-131073"/>
+                  <hideActionText value="false"/>
                   <text value="Update"/>
                 </properties>
               </component>
-              <component id="8b98c" class="javax.swing.JButton" binding="deleteButton" default-binding="true">
+              <component id="9e763" class="javax.swing.JButton" binding="deleteButton">
                 <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-13922170"/>
+                  <font name="Arial Black" size="14" style="1"/>
+                  <foreground color="-131073"/>
+                  <hideActionText value="false"/>
                   <text value="Delete"/>
                 </properties>
               </component>
